# md_playbook

./: .gitignore  README.md  config.py  main.py  pyproject.toml  yaml_frontmatter
functions/: __init__.py  at_exit_output.py  at_start_output.py  check_internet_connected.py  check_make_output_folders.py  check_url_in_log.py  create_latest_filename.py  create_latest_md_content.py  create_latest_md_header.py  create_latest_md_title.py  debug_functions.py  extract_metadata_vars.py  get_latest_url.py  helper_functions.py  make_md_final.py  move_md_file_tmp_to_complete.py  process_latest_md_content.py  process_latest_md_header.py  process_latest_md_title.py  save_md_file_to_tmp.py  tranx_complete_to_vault.py  update_log.py  update_yaml.py
