[project]
name = "md-playbook"
version = "1.0.0"
description = "Creates a markdown doc of the latest politico playbook newsletter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "curl-cffi>=0.15.0",
    "markitdown>=0.0.2",
    "numpy<2.0",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
    "undetected-chromedriver>=3.5.5",
]
